--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Maps\LR\LR_YJJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_FSXMJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_LPJBXX_Map.cs" />
+    <Compile Include="Maps\PFCG\PFCG_MYWJJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_SJSMJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_SPJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_XBSPJBXX_Map.cs" />
@@ -234,6 +235,7 @@
     <Compile Include="Models\LR\LR_YJJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_FSXMJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_LPJBXX.cs" />
+    <Compile Include="Models\PFCG\PFCG_MYWJJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_SJSMJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_SPJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_XBSPJBXX.cs" />
