--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -111,6 +111,7 @@
     <Compile Include="BLL\PFCG\PFCG_SJSMBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_SPBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_XBSPBLL.cs" />
+    <Compile Include="BLL\PFCG\PFCG_HWYDBLL.cs" />
     <Compile Include="BLL\PWKQ\PWKQ_DYPBLL.cs" />
     <Compile Include="BLL\PWKQ\PWKQ_QTKQBLL.cs" />
     <Compile Include="BLL\PWKQ\PWKQ_XFKGWQBLL.cs" />
