--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -339,6 +339,7 @@
     <Content Include="Areas\Business\Css\LR\LR_YJ.css" />
     <Content Include="Areas\Business\Css\PageCommon.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_FSXM.css" />
+    <Content Include="Areas\Business\Css\PFCG\PFCG_HZP.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_LP.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_MYWJ.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_SJSM.css" />
@@ -530,6 +531,8 @@
     <Content Include="Areas\Business\Scripts\Business\PageJson.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_FSXM.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_FSXMYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_HZP.js" />
+    <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_HZPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_LP.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_LPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_MYWJ.js" />
@@ -1018,6 +1021,7 @@
     <Compile Include="Areas\Business\Controllers\LR\LR_WSController.cs" />
     <Compile Include="Areas\Business\Controllers\LR\LR_YJController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_FSXMController.cs" />
+    <Compile Include="Areas\Business\Controllers\PFCG\PFCG_HZPController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_LPController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_MYWJController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_SJSMController.cs" />
@@ -1250,6 +1254,7 @@
     <Content Include="Areas\Business\Views\PFCG_SJSM\PFCG_SJSM.cshtml" />
     <Content Include="Areas\Business\Views\PFCG_MYWJ\PFCG_MYWJ.cshtml" />
     <Content Include="Areas\Business\Views\PFCG_HWYD\PFCG_HWYD.cshtml" />
+    <Content Include="Areas\Business\Views\PFCG_HZP\PFCG_HZP.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
