--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -112,6 +112,7 @@
     <Compile Include="LR\ILR_WDBLL.cs" />
     <Compile Include="LR\ILR_WSBLL.cs" />
     <Compile Include="LR\ILR_YJBLL.cs" />
+    <Compile Include="PFCG\IPFCG_AFSBBLL.cs" />
     <Compile Include="PFCG\IPFCG_FSXMBLL.cs" />
     <Compile Include="PFCG\IPFCG_HZPBLL.cs" />
     <Compile Include="PFCG\IPFCG_LPBLL.cs" />
