--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Maps\LR\LR_YJJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_AFSBJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_FSXMJBXX_Map.cs" />
+    <Compile Include="Maps\PFCG\PFCG_FZBLJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_HZPJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_LPJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_MYWJJBXX_Map.cs" />
@@ -238,6 +239,7 @@
     <Compile Include="Models\LR\LR_YJJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_AFSBJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_FSXMJBXX.cs" />
+    <Compile Include="Models\PFCG\PFCG_FZBLJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_HZPJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_LPJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_MYWJJBXX.cs" />
