--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -114,6 +114,7 @@
     <Compile Include="LR\ILR_YJBLL.cs" />
     <Compile Include="PFCG\IPFCG_AFSBBLL.cs" />
     <Compile Include="PFCG\IPFCG_FSXMBLL.cs" />
+    <Compile Include="PFCG\IPFCG_FZBLBLL.cs" />
     <Compile Include="PFCG\IPFCG_HZPBLL.cs" />
     <Compile Include="PFCG\IPFCG_LPBLL.cs" />
     <Compile Include="PFCG\IPFCG_MYWJBLL.cs" />
