--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -340,6 +340,7 @@
     <Content Include="Areas\Business\Css\PageCommon.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_AFSB.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_FSXM.css" />
+    <Content Include="Areas\Business\Css\PFCG\PFCG_FZBL.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_HZP.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_LP.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_MYWJ.css" />
@@ -534,6 +535,8 @@
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_AFSBYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_FSXM.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_FSXMYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_FZBL.js" />
+    <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_FZBLYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_HZP.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_HZPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_LP.js" />
@@ -1025,6 +1028,7 @@
     <Compile Include="Areas\Business\Controllers\LR\LR_YJController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_AFSBController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_FSXMController.cs" />
+    <Compile Include="Areas\Business\Controllers\PFCG\PFCG_FZBLController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_HZPController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_LPController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_MYWJController.cs" />
@@ -1260,6 +1264,7 @@
     <Content Include="Areas\Business\Views\PFCG_HWYD\PFCG_HWYD.cshtml" />
     <Content Include="Areas\Business\Views\PFCG_HZP\PFCG_HZP.cshtml" />
     <Content Include="Areas\Business\Views\PFCG_AFSB\PFCG_AFSB.cshtml" />
+    <Content Include="Areas\Business\Views\PFCG_FZBL\PFCG_FZBL.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
