--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -123,9 +123,11 @@
     <Compile Include="Maps\PFCG\PFCG_AFSBJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_FSXMJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_FZBLJBXX_Map.cs" />
+    <Compile Include="Maps\PFCG\PFCG_HXPJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_HZPJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_LPJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_MYWJJBXX_Map.cs" />
+    <Compile Include="Maps\PFCG\PFCG_SCSBJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_SJSMJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_SPJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_XBSPJBXX_Map.cs" />
@@ -240,9 +242,11 @@
     <Compile Include="Models\PFCG\PFCG_AFSBJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_FSXMJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_FZBLJBXX.cs" />
+    <Compile Include="Models\PFCG\PFCG_HXPJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_HZPJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_LPJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_MYWJJBXX.cs" />
+    <Compile Include="Models\PFCG\PFCG_SCSBJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_SJSMJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_SPJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_XBSPJBXX.cs" />
