--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -108,9 +108,11 @@
     <Compile Include="BLL\PFCG\PFCG_AFSBBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_FSXMBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_FZBLBLL.cs" />
+    <Compile Include="BLL\PFCG\PFCG_HXPBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_HZPBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_LPBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_MYWJBLL.cs" />
+    <Compile Include="BLL\PFCG\PFCG_SCSBBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_SJSMBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_SPBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_XBSPBLL.cs" />
