--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Maps\LR\LR_WSJBXX_Map.cs" />
     <Compile Include="Maps\LR\LR_YJJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_AFSBJBXX_Map.cs" />
+    <Compile Include="Maps\PFCG\PFCG_DGDLJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_FSXMJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_FZBLJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_HXPJBXX_Map.cs" />
@@ -240,6 +241,7 @@
     <Compile Include="Models\LR\LR_WSJBXX.cs" />
     <Compile Include="Models\LR\LR_YJJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_AFSBJBXX.cs" />
+    <Compile Include="Models\PFCG\PFCG_DGDLJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_FSXMJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_FZBLJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_HXPJBXX.cs" />
