--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -114,6 +114,7 @@
     <Compile Include="LR\ILR_YJBLL.cs" />
     <Compile Include="PFCG\IPFCG_AFSBBLL.cs" />
     <Compile Include="PFCG\IPFCG_DGDLBLL.cs" />
+    <Compile Include="PFCG\IPFCG_DZYQJBLL.cs" />
     <Compile Include="PFCG\IPFCG_FSXMBLL.cs" />
     <Compile Include="PFCG\IPFCG_FZBLBLL.cs" />
     <Compile Include="PFCG\IPFCG_HXPBLL.cs" />
@@ -125,6 +126,7 @@
     <Compile Include="PFCG\IPFCG_SPBLL.cs" />
     <Compile Include="PFCG\IPFCG_XBSPBLL.cs" />
     <Compile Include="PFCG\IPFCG_HWYDBLL.cs" />
+    <Compile Include="PFCG\IPFCG_YBYQBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PWKQ\IPWKQ_DYPBLL.cs" />
     <Compile Include="PWKQ\IPWKQ_QTKQBLL.cs" />
