--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -340,6 +340,7 @@
     <Content Include="Areas\Business\Css\PageCommon.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_AFSB.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_DGDL.css" />
+    <Content Include="Areas\Business\Css\PFCG\PFCG_DZYQJ.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_FSXM.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_FZBL.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_HXP.css" />
@@ -351,6 +352,7 @@
     <Content Include="Areas\Business\Css\PFCG\PFCG_SP.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_XBSP.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_HWYD.css" />
+    <Content Include="Areas\Business\Css\PFCG\PFCG_YBYQ.css" />
     <Content Include="Areas\Business\Css\PWKQ\PWKQ_DYP.css" />
     <Content Include="Areas\Business\Css\PWKQ\PWKQ_QTKQ.css" />
     <Content Include="Areas\Business\Css\PWKQ\PWKQ_XFKGWQ.css" />
@@ -538,6 +540,8 @@
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_AFSBYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_DGDL.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_DGDLYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_DZYQJ.js" />
+    <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_DZYQJYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_FSXM.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_FSXMYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_FZBL.js" />
@@ -560,6 +564,8 @@
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_XBSPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_HWYD.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_HWYDYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_YBYQ.js" />
+    <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_YBYQYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\Public_TP.js" />
     <Content Include="Areas\Business\Scripts\Business\PWKQ\PWKQ_DYP.js" />
     <Content Include="Areas\Business\Scripts\Business\PWKQ\PWKQ_DYPYZ.js" />
@@ -1037,6 +1043,7 @@
     <Compile Include="Areas\Business\Controllers\LR\LR_YJController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_AFSBController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_DGDLController.cs" />
+    <Compile Include="Areas\Business\Controllers\PFCG\PFCG_DZYQJController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_FSXMController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_FZBLController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_HXPController.cs" />
@@ -1048,6 +1055,7 @@
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_SPController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_XBSPController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_HWYDController.cs" />
+    <Compile Include="Areas\Business\Controllers\PFCG\PFCG_YBYQController.cs" />
     <Compile Include="Areas\Business\Controllers\PWKQ\PWKQ_DYPController.cs" />
     <Compile Include="Areas\Business\Controllers\PWKQ\PWKQ_QTKQController.cs" />
     <Compile Include="Areas\Business\Controllers\PWKQ\PWKQ_XFKGWQController.cs" />
@@ -1280,6 +1288,8 @@
     <Content Include="Areas\Business\Views\PFCG_SCSB\PFCG_SCSB.cshtml" />
     <Content Include="Areas\Business\Views\PFCG_HXP\PFCG_HXP.cshtml" />
     <Content Include="Areas\Business\Views\PFCG_DGDL\PFCG_DGDL.cshtml" />
+    <Content Include="Areas\Business\Views\PFCG_DZYQJ\PFCG_DZYQJ.cshtml" />
+    <Content Include="Areas\Business\Views\PFCG_YBYQ\PFCG_YBYQ.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
