--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Maps\LR\LR_YJJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_AFSBJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_DGDLJBXX_Map.cs" />
+    <Compile Include="Maps\PFCG\PFCG_DJZMJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_DZYQJJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_FSXMJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_FZBLJBXX_Map.cs" />
@@ -244,6 +245,7 @@
     <Compile Include="Models\LR\LR_YJJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_AFSBJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_DGDLJBXX.cs" />
+    <Compile Include="Models\PFCG\PFCG_DJZMJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_DZYQJJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_FSXMJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_FZBLJBXX.cs" />
