--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -340,6 +340,7 @@
     <Content Include="Areas\Business\Css\PageCommon.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_AFSB.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_DGDL.css" />
+    <Content Include="Areas\Business\Css\PFCG\PFCG_DJZM.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_DZYQJ.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_FSXM.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_FZBL.css" />
@@ -540,6 +541,8 @@
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_AFSBYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_DGDL.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_DGDLYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_DJZM.js" />
+    <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_DJZMYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_DZYQJ.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_DZYQJYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_FSXM.js" />
@@ -1043,6 +1046,7 @@
     <Compile Include="Areas\Business\Controllers\LR\LR_YJController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_AFSBController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_DGDLController.cs" />
+    <Compile Include="Areas\Business\Controllers\PFCG\PFCG_DJZMController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_DZYQJController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_FSXMController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_FZBLController.cs" />
@@ -1290,6 +1294,7 @@
     <Content Include="Areas\Business\Views\PFCG_DGDL\PFCG_DGDL.cshtml" />
     <Content Include="Areas\Business\Views\PFCG_DZYQJ\PFCG_DZYQJ.cshtml" />
     <Content Include="Areas\Business\Views\PFCG_YBYQ\PFCG_YBYQ.cshtml" />
+    <Content Include="Areas\Business\Views\PFCG_DJZM\PFCG_DJZM.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
