--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Maps\PFCG\PFCG_XBSPJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_HWYDJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_YBYQJBXX_Map.cs" />
+    <Compile Include="Maps\PFCG\PFCG_YCLJBXX_Map.cs" />
     <Compile Include="Maps\PHOTOS_Map.cs" />
     <Compile Include="Maps\PWKQ\PWKQ_DYPJBXX_Map.cs" />
     <Compile Include="Maps\PWKQ\PWKQ_QTKQJBXX_Map.cs" />
@@ -259,6 +260,7 @@
     <Compile Include="Models\PFCG\PFCG_XBSPJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_HWYDJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_YBYQJBXX.cs" />
+    <Compile Include="Models\PFCG\PFCG_YCLJBXX.cs" />
     <Compile Include="Models\PHOTOS.cs" />
     <Compile Include="Models\PublicType.cs" />
     <Compile Include="Models\PWKQ\PWKQ_DYPJBXX.cs" />
