--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -354,6 +354,7 @@
     <Content Include="Areas\Business\Css\PFCG\PFCG_XBSP.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_HWYD.css" />
     <Content Include="Areas\Business\Css\PFCG\PFCG_YBYQ.css" />
+    <Content Include="Areas\Business\Css\PFCG\PFCG_YCL.css" />
     <Content Include="Areas\Business\Css\PWKQ\PWKQ_DYP.css" />
     <Content Include="Areas\Business\Css\PWKQ\PWKQ_QTKQ.css" />
     <Content Include="Areas\Business\Css\PWKQ\PWKQ_XFKGWQ.css" />
@@ -569,6 +570,8 @@
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_HWYDYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_YBYQ.js" />
     <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_YBYQYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_YCL.js" />
+    <Content Include="Areas\Business\Scripts\Business\PFCG\PFCG_YCLYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\Public_TP.js" />
     <Content Include="Areas\Business\Scripts\Business\PWKQ\PWKQ_DYP.js" />
     <Content Include="Areas\Business\Scripts\Business\PWKQ\PWKQ_DYPYZ.js" />
@@ -1060,6 +1063,7 @@
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_XBSPController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_HWYDController.cs" />
     <Compile Include="Areas\Business\Controllers\PFCG\PFCG_YBYQController.cs" />
+    <Compile Include="Areas\Business\Controllers\PFCG\PFCG_YCLController.cs" />
     <Compile Include="Areas\Business\Controllers\PWKQ\PWKQ_DYPController.cs" />
     <Compile Include="Areas\Business\Controllers\PWKQ\PWKQ_QTKQController.cs" />
     <Compile Include="Areas\Business\Controllers\PWKQ\PWKQ_XFKGWQController.cs" />
@@ -1295,6 +1299,7 @@
     <Content Include="Areas\Business\Views\PFCG_DZYQJ\PFCG_DZYQJ.cshtml" />
     <Content Include="Areas\Business\Views\PFCG_YBYQ\PFCG_YBYQ.cshtml" />
     <Content Include="Areas\Business\Views\PFCG_DJZM\PFCG_DJZM.cshtml" />
+    <Content Include="Areas\Business\Views\PFCG_YCL\PFCG_YCL.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
