--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -128,6 +128,7 @@
     <Compile Include="PFCG\IPFCG_XBSPBLL.cs" />
     <Compile Include="PFCG\IPFCG_HWYDBLL.cs" />
     <Compile Include="PFCG\IPFCG_YBYQBLL.cs" />
+    <Compile Include="PFCG\IPFCG_YCLBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PWKQ\IPWKQ_DYPBLL.cs" />
     <Compile Include="PWKQ\IPWKQ_QTKQBLL.cs" />
