--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -129,13 +129,16 @@
     <Compile Include="Maps\PFCG\PFCG_FZBLJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_HXPJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_HZPJBXX_Map.cs" />
+    <Compile Include="Maps\PFCG\PFCG_KQJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_LPJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_MYWJJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_SCSBJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_SJSMJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_SPJBXX_Map.cs" />
+    <Compile Include="Maps\PFCG\PFCG_TSJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_XBSPJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_HWYDJBXX_Map.cs" />
+    <Compile Include="Maps\PFCG\PFCG_YXJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_YBYQJBXX_Map.cs" />
     <Compile Include="Maps\PFCG\PFCG_YCLJBXX_Map.cs" />
     <Compile Include="Maps\PHOTOS_Map.cs" />
@@ -254,13 +257,16 @@
     <Compile Include="Models\PFCG\PFCG_FZBLJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_HXPJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_HZPJBXX.cs" />
+    <Compile Include="Models\PFCG\PFCG_KQJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_LPJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_MYWJJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_SCSBJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_SJSMJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_SPJBXX.cs" />
+    <Compile Include="Models\PFCG\PFCG_TSJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_XBSPJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_HWYDJBXX.cs" />
+    <Compile Include="Models\PFCG\PFCG_YXJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_YBYQJBXX.cs" />
     <Compile Include="Models\PFCG\PFCG_YCLJBXX.cs" />
     <Compile Include="Models\PHOTOS.cs" />
