--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -114,15 +114,18 @@
     <Compile Include="BLL\PFCG\PFCG_FZBLBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_HXPBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_HZPBLL.cs" />
+    <Compile Include="BLL\PFCG\PFCG_KQBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_LPBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_MYWJBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_SCSBBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_SJSMBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_SPBLL.cs" />
+    <Compile Include="BLL\PFCG\PFCG_TSBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_XBSPBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_HWYDBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_YBYQBLL.cs" />
     <Compile Include="BLL\PFCG\PFCG_YCLBLL.cs" />
+    <Compile Include="BLL\PFCG\PFCG_YXBLL.cs" />
     <Compile Include="BLL\PWKQ\PWKQ_DYPBLL.cs" />
     <Compile Include="BLL\PWKQ\PWKQ_QTKQBLL.cs" />
     <Compile Include="BLL\PWKQ\PWKQ_XFKGWQBLL.cs" />
